prevent silent failure in compilation